🚀 Add Build Scripts and Enhanced API Export Structure 📋 Summary This PR introduces local development build scripts and modernizes the extension's API export structure to improve developer experience and enable better integration with other VS Code extensions.
✨ What's New
🔨 Local Build Scripts
PowerShell Script (build-vsix.ps1) - Advanced build automation with colored output and error handling
Batch Script (build-vsix.bat) - Simple, cross-compatible build automation
NPM Scripts - Added build:vsix and package commands to package.json
🔧 Modern API Exports
Direct Function Exports - Individual functions can now be imported directly
Type Exports - WinCCOAProject and ProjectConfig types are now exportable
Backward Compatibility - Existing getAPI() approach still supported
Better Tree-Shaking - Consumers can import only needed functions
📦 Version Bump
Updated from v0.0.1 to v0.0.2 to reflect new features
🛠️ Build Scripts Features
PowerShell Script (build-vsix.ps1)
Features:

✅ Dependency validation and auto-installation
✅ Colored progress output with emojis
✅ Build size reporting and file location
✅ Automatic Explorer window opening
✅ Error handling with detailed messages
✅ Clean build options
Batch Script (build-vsix.bat)
Features:

✅ No PowerShell execution policy issues
✅ Cross-compatible with older Windows versions
✅ Automatic Explorer opening
✅ User-friendly output with installation instructions
NPM Scripts
🔄 API Export Modernization
Before (Legacy)
After (Modern)
📚 Available API Functions
Function	Description	Return Type
getProjects()	Get all WinCC OA projects	WinCCOAProject[]
getProjectByPath(path)	Find project by installation path	WinCCOAProject \| undefined
getProjectVersion(dir)	Get WinCC OA version for project	string | undefined
getRegisteredProjects()	Get raw project configurations	ProjectConfig[]
refreshProjects()	Refresh project list	void
🎯 Benefits
For Developers:
🚀 Faster Local Development - One-command VSIX generation
🔧 Better IDE Support - Improved autoco

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "wincc-oa-projects",
   "displayName": "WinCC OA Projects",
   "description": "View and manage WinCC OA projects in VS Code",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "publisher": "mPokornyETM",
   "repository": {
     "type": "git",
@@ -143,7 +143,9 @@
     "watch": "tsc -watch -p ./",
     "pretest": "npm run compile && npm run lint",
     "lint": "eslint src",
-    "test": "vscode-test"
+    "test": "vscode-test",
+    "build:vsix": "npm run compile && vsce package",
+    "package": "vsce package"
   },
   "devDependencies": {
     "@types/mocha": "^10.0.10",
