fix: correct GitHub API parameter names in PR labeling workflow
- Change pull_request_number to pull_number for pulls.listCommits API
- Change pull_request_number to pull_number for pulls.listFiles API
- These APIs expect pull_number not pull_request_number parameter

Fixes: RequestError [HttpError]: Not Found (404) on API calls

--- a/.github/workflows/pr-labels.yml
+++ b/.github/workflows/pr-labels.yml
@@ -40,7 +40,7 @@ jobs:
           const commits = await github.rest.pulls.listCommits({
             owner: context.repo.owner,
             repo: context.repo.repo,
-            pull_request_number: pr.number,
+            pull_number: pr.number,
           });
           
           const commitMessages = commits.data.map(commit => 
@@ -247,7 +247,7 @@ jobs:
           const files = await github.rest.pulls.listFiles({
             owner: context.repo.owner,
             repo: context.repo.repo,
-            pull_request_number: pr.number,
+            pull_number: pr.number,
           });
           
           const fileCount = files.data.length;
