fix: update release workflow to work with branch protection rules (#4)
* fix: update release workflow to work with branch protection rules

- Modified release workflow to avoid direct pushes to main branch
- Added automatic PR creation for version/changelog updates
- Created auto-merge workflow for release PRs from GitHub Actions bot
- Updated tag creation to work without committing to protected branch
- Added comprehensive documentation for branch protection compatibility
- Enhanced error handling for repository rule violations

This resolves the GH013 error when branch protection requires PRs for changes.

BREAKING CHANGE: Release process now creates PRs for version updates instead of direct pushes

* fix: resolve JavaScript syntax error in PR labeling workflow

- Remove duplicate context declaration causing SyntaxError
- Context object is already available in GitHub Actions environment
- No need to destructure from @actions/github require statement

Fixes: SyntaxError: Identifier 'context' has already been declared

* fix: correct GitHub API parameter names in PR labeling workflow

- Change pull_request_number to pull_number for pulls.listCommits API
- Change pull_request_number to pull_number for pulls.listFiles API
- These APIs expect pull_number not pull_request_number parameter

Fixes: RequestError [HttpError]: Not Found (404) on API calls

--- a/.github/workflows/pr-labels.yml
+++ b/.github/workflows/pr-labels.yml
@@ -25,7 +25,6 @@ jobs:
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
         script: |
-          const { context } = require('@actions/github');
           const pr = context.payload.pull_request;
           
           // Get PR details
@@ -41,7 +40,7 @@ jobs:
           const commits = await github.rest.pulls.listCommits({
             owner: context.repo.owner,
             repo: context.repo.repo,
-            pull_request_number: pr.number,
+            pull_number: pr.number,
           });
           
           const commitMessages = commits.data.map(commit => 
@@ -248,7 +247,7 @@ jobs:
           const files = await github.rest.pulls.listFiles({
             owner: context.repo.owner,
             repo: context.repo.repo,
-            pull_request_number: pr.number,
+            pull_number: pr.number,
           });
           
           const fileCount = files.data.length;
