fix: add missing checkout step to auto-merge Dependabot workflow
- Fix 'fatal: not a git repository' error in Handle pending CI step
- The gh CLI commands require repository context to function properly
- Add actions/checkout@v4 step at the beginning of the workflow

--- a/.github/workflows/auto-merge-dependabot.yml
+++ b/.github/workflows/auto-merge-dependabot.yml
@@ -16,6 +16,9 @@ jobs:
       contains(github.event.pull_request.labels.*.name, 'dependencies')
     
     steps:
+    - name: Checkout repository
+      uses: actions/checkout@v4
+      
     - name: Wait for CI checks
       run: |
         echo "⏳ Waiting for CI checks to complete..."
