--- a/package.json
+++ b/package.json
@@ -144,6 +144,8 @@
     "pretest": "npm run compile && npm run lint",
     "lint": "eslint src",
     "test": "vscode-test",
+    "test:coverage": "c8 --reporter=lcov --reporter=text --reporter=json --reporter=json-summary --all --src src --exclude 'src/test/**' npm test",
+    "coverage": "npm run test:coverage",
     "build:vsix": "npm run compile && vsce package",
     "package": "vsce package",
     "release": "standard-version",
@@ -159,6 +161,7 @@
     "@typescript-eslint/parser": "^8.45.0",
     "@vscode/test-cli": "^0.0.12",
     "@vscode/test-electron": "^2.5.2",
+    "c8": "^10.1.3",
     "canvas": "^3.2.0",
     "eslint": "^9.36.0",
     "typescript": "^5.9.3"
