feat: add detailed WinCC OA version information using WCCILpmon -version
- Add getVersionInfo command to retrieve detailed version information
- Implement getDetailedVersionInfo() function to execute WCCILpmon -version
- Parse version output to extract version, platform, architecture, build date, and commit hash
- Add showVersionInfoDialog() to display formatted version information
- Create new context value 'winccOASystemProject' for WinCC OA system installations
- Add command to VS Code command palette and context menus
- Show version info command only for WinCC OA system projects
- Display results in markdown document and output channel
- Support copying version info to clipboard

Example output format:
WCCILpmon (1), 2025.11.03 15:15:01.846: 3.20.5 platform Windows AMD64 linked at Mar 2 2025 09:51:08 (faf9f4332a)

Features:
- Command palette: 'WinCC OA: Show Detailed Version Information'
- Context menu on WinCC OA system projects
- Inline action button for easy access
- Formatted markdown output with full details
- Output channel integration for detailed logging
- Clipboard support for version information

--- a/package.json
+++ b/package.json
@@ -121,6 +121,11 @@
         "command": "winccOAProjects.registerRunnableProject",
         "title": "WinCC OA: Register Runnable Project",
         "icon": "$(play)"
+      },
+      {
+        "command": "winccOAProjects.getVersionInfo",
+        "title": "WinCC OA: Show Detailed Version Information",
+        "icon": "$(info)"
       }
     ],
     "menus": {
@@ -158,8 +163,18 @@
           "group": "inline@2"
         },
         {
+          "command": "winccOAProjects.getVersionInfo",
+          "when": "view == winccOAProjects && viewItem == winccOASystemProject",
+          "group": "inline@3"
+        },
+        {
           "command": "winccOAProjects.openInExplorer",
           "when": "view == winccOAProjects && viewItem == winccOAProject",
+          "group": "navigation@1"
+        },
+        {
+          "command": "winccOAProjects.getVersionInfo",
+          "when": "view == winccOAProjects && viewItem == winccOASystemProject",
           "group": "navigation@1"
         },
         {
