--- a/package.json
+++ b/package.json
@@ -435,16 +435,6 @@
         "when": "explorerResourceIsFolder"
       }
     ],
-    "extensionPoints": [
-      {
-        "name": "winccOAProjectActions",
-        "description": "Contribute custom actions for WinCC OA projects"
-      },
-      {
-        "name": "winccOAProjectView",
-        "description": "Contribute custom views to WinCC OA project details panel"
-      }
-    ],
     "configuration": {
       "title": "WinCC OA Projects",
       "properties": {
@@ -468,7 +458,17 @@
     "compile": "tsc -p ./",
     "watch": "tsc -watch -p ./",
     "pretest": "npm run compile && npm run lint",
-    "lint": "eslint src",
+    "lint": "eslint src/**/*.ts",
+    "lint:fix": "eslint src/**/*.ts --fix",
+    "lint:md": "markdownlint \"**/*.md\" --ignore node_modules",
+    "lint:md:fix": "markdownlint \"**/*.md\" --ignore node_modules --fix",
+    "format": "prettier --write src/**/*.ts",
+    "format:check": "prettier --check src/**/*.ts",
+    "format:md": "prettier --write \"**/*.md\"",
+    "format:md:check": "prettier --check \"**/*.md\"",
+    "style-check": "npm run lint && npm run format:check && npm run lint:md && npm run format:md:check",
+    "style-fix": "npm run lint:fix && npm run format && npm run lint:md:fix && npm run format:md",
+    "pre-commit": "npm run style-fix",
     "test": "vscode-test",
     "test:coverage": "c8 --reporter=lcov --reporter=text --reporter=json --reporter=json-summary --all --src src --exclude 'src/test/**' npm test",
     "coverage": "npm run test:coverage",
@@ -491,6 +491,9 @@
     "c8": "^10.1.3",
     "canvas": "^3.2.0",
     "eslint": "^9.39.0",
+    "eslint-plugin-jsdoc": "^50.8.0",
+    "markdownlint-cli": "^0.45.0",
+    "prettier": "^3.6.2",
     "sinon": "^21.0.0",
     "typescript": "^5.9.3"
   },
