--- a/.github/workflows/setup-branch-protection.yml
+++ b/.github/workflows/setup-branch-protection.yml
@@ -10,6 +10,9 @@ on:
 
 permissions:
   contents: read
+  repository-projects: write
+  issues: write
+  pull-requests: write
 
 jobs:
   setup-protection:
@@ -18,7 +21,7 @@ jobs:
     
     steps:
     - name: Setup Branch Protection
-      uses: actions/github-script@v7
+      uses: actions/github-script@v8
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
         script: |
