--- a/.github/workflows/setup-gitflow.yml
+++ b/.github/workflows/setup-gitflow.yml
@@ -11,7 +11,9 @@ on:
 
 permissions:
   contents: read
-  actions: write
+  repository-projects: write
+  issues: write
+  pull-requests: write
 
 jobs:
   setup-gitflow-protection:
@@ -20,10 +22,10 @@ jobs:
     
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
 
       - name: Setup branch protection for main
-        uses: actions/github-script@v7
+        uses: actions/github-script@v8
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
@@ -57,7 +59,7 @@ jobs:
             }
 
       - name: Setup branch protection for develop
-        uses: actions/github-script@v7
+        uses: actions/github-script@v8
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
@@ -91,7 +93,7 @@ jobs:
             }
 
       - name: Setup Git Flow branch naming rules
-        uses: actions/github-script@v7
+        uses: actions/github-script@v8
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
@@ -119,7 +121,7 @@ jobs:
     
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
 
       - name: Validate Git Flow branches exist
         run: |
