feat: Implement comprehensive version management system
Added centralized version control to prevent GitHub/Marketplace mismatches:

🎯 Version Management Script (scripts/version.js):
- ✅ Semantic version increments (patch/minor/major)
- ✅ Version validation and format checking
- ✅ Status reporting with Git tag history
- ✅ Pre-release cleanup for stable releases
- 🎨 Colorized console output with clear instructions

📋 NPM Scripts Integration:
- npm run version:check - Check current status
- npm run version:patch - Increment patch version
- npm run version:minor - Increment minor version
- npm run version:major - Increment major version

🛡️ Enhanced Release Workflow Protection:
- ✅ Pre-release version cleanup before stable release
- ✅ Version format validation (X.Y.Z only)
- ✅ Consistent versioning across GitHub/Marketplace
- ✅ Explicit version publishing to prevent drift
- 📋 Comprehensive version consistency logging

📚 Complete Documentation (docs/development/VERSION_MANAGEMENT.md):
- 🎯 Single source of truth approach (package.json)
- 📋 Step-by-step workflow instructions
- 🚨 Troubleshooting guide for version issues
- ✅ Best practices and DO/DON'T guidelines
- 🔄 Complete workflow examples

Key Benefits:
- Eliminates version mismatches between releases
- Provides clear workflow for version management
- Automated validation prevents invalid versions
- Centralized control with multiple access methods

This ensures GitHub releases and VS Code Marketplace always have
matching versions with proper semantic versioning.

--- a/package.json
+++ b/package.json
@@ -469,6 +469,10 @@
     "style-check": "npm run lint && npm run format:check && npm run lint:md && npm run format:md:check",
     "style-fix": "npm run lint:fix && npm run format && npm run lint:md:fix && npm run format:md",
     "pre-commit": "npm run style-fix",
+    "version:check": "node scripts/version.js check",
+    "version:patch": "node scripts/version.js patch",
+    "version:minor": "node scripts/version.js minor",
+    "version:major": "node scripts/version.js major",
     "test": "vscode-test",
     "test:coverage": "c8 --reporter=lcov --reporter=text --reporter=json --reporter=json-summary --all --src src --exclude 'src/test/**' npm test",
     "coverage": "npm run test:coverage",
