--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -147,9 +147,39 @@ jobs:
         echo "release-type=$RELEASE_TYPE" >> $GITHUB_OUTPUT
         echo "force-version=$FORCE_VERSION" >> $GITHUB_OUTPUT
         
+    - name: Validate Version Consistency
+      id: version-check
+      run: |
+        # Get current version from package.json
+        CURRENT_VERSION=$(node -p "require('./package.json').version")
+        echo "📋 Current package.json version: $CURRENT_VERSION"
+        
+        # Check if this is a valid release version (not pre-release)
+        if [[ "$CURRENT_VERSION" == *"-"* ]]; then
+          echo "⚠️ WARNING: Current version is a pre-release: $CURRENT_VERSION"
+          echo "This should be cleaned up before stable release"
+          
+          # Extract base version and increment
+          BASE_VERSION=$(echo "$CURRENT_VERSION" | cut -d'-' -f1)
+          echo "📦 Base version extracted: $BASE_VERSION"
+          
+          # Update package.json to clean version
+          npm version "$BASE_VERSION" --no-git-tag-version
+          CLEAN_VERSION=$(node -p "require('./package.json').version")
+          echo "✅ Cleaned version: $CLEAN_VERSION"
+        else
+          echo "✅ Version is clean: $CURRENT_VERSION"
+          CLEAN_VERSION="$CURRENT_VERSION"
+        fi
+        
+        echo "clean-version=$CLEAN_VERSION" >> $GITHUB_OUTPUT
+
     - name: Create Release  
       id: release
       run: |
+        CURRENT_VERSION="${{ steps.version-check.outputs.clean-version }}"
+        echo "Starting with clean version: $CURRENT_VERSION"
+        
         # Determine release approach
         if [[ "${{ github.event_name }}" == "workflow_dispatch" ]]; then
           # Manual workflow dispatch
@@ -172,10 +202,17 @@ jobs:
           standard-version --no-verify --skip.commit=true --skip.tag=true
         fi
         
-        # Get the new version
+        # Get the final version
         NEW_VERSION=$(node -p "require('./package.json').version")
         echo "version=$NEW_VERSION" >> $GITHUB_OUTPUT
-        echo "New version: $NEW_VERSION"
+        echo "🎯 Final release version: $NEW_VERSION"
+        
+        # Validate version format
+        if [[ ! "$NEW_VERSION" =~ ^[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
+          echo "❌ ERROR: Invalid version format: $NEW_VERSION"
+          echo "Expected format: X.Y.Z (semantic versioning)"
+          exit 1
+        fi
         
         # Create tag locally (we'll push it later)
         git tag "v$NEW_VERSION"
@@ -189,6 +226,14 @@ jobs:
           echo "📝 No changes to commit"
           echo "has-changes=false" >> $GITHUB_OUTPUT
         fi
+        
+        # Version consistency check
+        echo ""
+        echo "🔍 Version Consistency Check:"
+        echo "  📦 package.json: $NEW_VERSION"
+        echo "  🏷️ Git tag: v$NEW_VERSION"
+        echo "  🚀 GitHub Release: v$NEW_VERSION"  
+        echo "  🏪 VS Code Marketplace: $NEW_VERSION"
         
     - name: Extract Changelog
       id: changelog
@@ -347,16 +392,39 @@ jobs:
     - name: Publish to VS Code Marketplace
       run: |
         npm install -g @vscode/vsce
+        
+        # Get version for consistency check
+        PACKAGE_VERSION=$(node -p "require('./package.json').version")
+        echo "📦 Package version: $PACKAGE_VERSION"
+        
+        # Validate version format before publishing
+        if [[ ! "$PACKAGE_VERSION" =~ ^[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
+          echo "❌ ERROR: Invalid version format for marketplace: $PACKAGE_VERSION"
+          echo "Marketplace requires semantic versioning (X.Y.Z)"
+          exit 1
+        fi
+        
+        # Package with version validation
         vsce package
         
         # Only publish if VSCE_PAT is available
         if [ -n "${{ secrets.VSCE_PAT }}" ]; then
-          echo "Publishing to VS Code Marketplace..."
-          vsce publish -p ${{ secrets.VSCE_PAT }}
-          echo "✅ Published to marketplace!"
+          echo "🏪 Publishing to VS Code Marketplace..."
+          echo "  📋 Extension: wincc-oa-projects"
+          echo "  🏷️ Version: $PACKAGE_VERSION"
+          echo "  🎯 Publisher: mPokornyETM"
+          
+          # Use explicit version to ensure consistency
+          vsce publish $PACKAGE_VERSION -p ${{ secrets.VSCE_PAT }}
+          
+          echo "✅ Published to marketplace successfully!"
+          echo "🔗 Marketplace URL: https://marketplace.visualstudio.com/items?itemName=mPokornyETM.wincc-oa-projects"
         else
           echo "⚠️ VSCE_PAT secret not found - skipping marketplace publish"
-          echo "To enable marketplace publishing, add your Personal Access Token as VSCE_PAT secret"
+          echo "To enable marketplace publishing:"
+          echo "  1. Generate Personal Access Token at https://dev.azure.com"
+          echo "  2. Add as VSCE_PAT secret in repository settings"
+          echo "  3. Re-run the workflow"
         fi
       env:
         VSCE_PAT: ${{ secrets.VSCE_PAT }}
